Solved a problem with a gap in the view port of the browser while it's in mobile size, I still haven't firgured out how to get it looking good in larger sizes

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ body {
   
   
   font-family: 'Titan One', cursive; 
-  letter-spacing: .016rem;
+  letter-spacing: .02rem;
+  margin: 0;
   
   
   
@@ -13,6 +14,8 @@ body {
   background-repeat: no-repeat;*/
 }
 
+
+
 html { 
   background: url(../imgs/walken_cowbell.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -21,62 +24,12 @@ html {
   background-size: cover;
 }
 
-
-
-/*body,html {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  height: 100%;
-  
-}*/
-
-/*body {
-  background-image: url(../imgs/walken_cowbell.jpg);
-  background-size: cover;
-  background-position: top;
-  background-repeat: no-repeat;
-  height: 100%;
-  width: 100%;
-}*/
-
-
-
-#apostrophe {
-  font-weight: bolder;
-}
-
-
-
-/*.cowbell1 {
-  display: flex;
-  padding: 10px;
-  align-items: center;
-  justify-content: left;  
-}
-
-.cowbell2 { 
-  display: flex;
-  padding: 10px;
-  padding-left: 55px;
-  align-items: center;
-  justify-content: left; 
-}
-
-.cowbell3 {
-  display: flex;
-  padding: 10px;
-  align-items: center;
-  justify-content: left;  
-}*/
-
-
 .key {
   border:  10px solid rgb(255, 74, 56);
-  border-radius: 100%;
-  margin: 10%;
+  border-radius: 20px;
+  /*margin: 10%;*/
   /*font-size: 30pt;*/
-  padding: 20px;
+  padding: 5%;
   transition: all 0.07s ease;
   
   text-align: center;
@@ -98,86 +51,24 @@ html {
   
 }
 
-.sound {
-  font-size: 20pt;
-  text-align: center;
+.sound  {
+  font-size: 140%;
+  /*text-align: center;*/
   color: white;
 }
 
-  /*html {
-    font-size: 8px; 
-  }
+/*.cowbell {
+  padding: 2%;
+  display: block;
+  align-items: center;
+  justify-content: center;  
+}*/
 
-  body,html {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 10vw 30vw 10vw;
-    grid-gap: 1em;
-  }*/
-  
-  
-  .cowbell {
-    /*padding: 2%;*/
-    display: block;
-    align-items: center;
-    justify-content: center;  
-  }
-  
-  /*.cowbell2 { 
-    padding: .75rem;
-    display: block;
-    padding: 0.75rem;
-    padding-left: 1rem;
-    align-items: center;
-    justify-content: center; 
-  }
-  
-  .cowbell3 {
-    padding: .75rem;
-    display: block;
-    padding: .75rem;
-    align-items: center;
-    justify-content: center; 
-  }*/
-  
-  
-  /*.key {
-    border: 5px solid rgba(248, 180, 77, 0.541);
-    border-radius: 100%;
-    margin: 5%;
-    font-size: 20pt;
-    padding: 5%;
-    transition: all 0.07s ease;
-    width: 10px;
-    text-align: center;
-    color: rgb(248, 180, 77);
-    background: rgba(0,0,0,0.4);
-    text-shadow: 0 0 .5rem black;
-  }*/
-  
-  /*.playing {
-    transform: scale(1);
-    border-color: rgba(243, 150, 73, 0.541);
-    box-shadow: 0 0 25% rgba(243, 150, 73, 0.541);
-  }*/
-  
-  .key p {
-    display: block;
-    font-size: 55pt;
-    text-transform: uppercase;
-    
-  }
-  
-  .sound {
-    font-size: 44pt;
-    /*letter-spacing: .016rem;*/
-    color: white;
-  }
 
-  
-  .doot { 
-    display: none;
-  }
+
+.doot { 
+  display: none;
+}
   
 
   @media screen and (max-width: 768px) {
@@ -187,14 +78,14 @@ html {
     .doot {
       display: block;
       text-align: center;
-      padding: 10% 0;
-      width: 100vw;
+      padding: 7% 0;
+      width: 100%;
       margin: 0;
-      background: rgb(243, 162, 41);
+      background: rgba(243, 162, 41, 0.466);
       color: rgb(255, 74, 56);
-      /*z-index: 999;*/
       font-size: 35pt;
       text-shadow: 0 0 3px black;
+      
     }
 
     /*.spoopy {
@@ -209,19 +100,19 @@ html {
     
 
     .cowbell {
-      /*display: none;*/
+      display: flex;
       /*position: absolute;*/
+      flex-direction: column;
       
       background-color: rgba(245, 11, 11, 0.466);
       overflow: hidden;
       transition: 1s;
       transform: translateY(-200%);
+      /*align-items: center;*/
+      width: 100%;
+      margin: 0;
+      /*text-align: center;*/
       align-items: center;
-      
-      
-      
-      
-
     }
 
     .cowbell.open {
@@ -229,11 +120,26 @@ html {
       transform: translateY(0%);
       overflow: hidden;
       /*height: 100%;*/
-      width: 98vw;
+      /*width: 100%;*/
       margin: 0;
       
     }
 
+    .key {
+      margin: 5%;
+    }
     
+  }
+
+  @media screen and (min-width: 769px) {
+    
+    .cowbell {
+  display: grid;
+  grid-template-rows: 20% 20% 20%;
+  grid-template-columns: repeat(4, 20%);
+  gap: 3%;
+  margin: 1% 0 0 1%;
+  
+}
   }
 
